--- a/pkg/providers/cloudstack/config/template-md.yaml
+++ b/pkg/providers/cloudstack/config/template-md.yaml
@@ -54,9 +54,14 @@ spec:
             [plugins."io.containerd.grpc.v1.cri".registry.mirrors."{{ $orig }}"]
               endpoint = ["https://{{ $mirror }}"]
             {{- end }}
-            {{- if .registryCACert }}
+            {{- if or .registryCACert .insecureSkip }}
             [plugins."io.containerd.grpc.v1.cri".registry.configs."{{ .mirrorBase }}".tls]
+            {{- if .registryCACert }}
               ca_file = "/etc/containerd/certs.d/{{ .mirrorBase }}/ca.crt"
+            {{- end }}
+            {{- if .insecureSkip }}
+              insecure_skip_verify = {{.insecureSkip}}
+            {{- end }}
             {{- end }}
         owner: root:root
         path: "/etc/containerd/config_append.toml"
