Add Cilium skipUpgrade flag to v1alpha1 API

--- a/config/crd/bases/anywhere.eks.amazonaws.com_clusters.yaml
+++ b/config/crd/bases/anywhere.eks.amazonaws.com_clusters.yaml
@@ -71,6 +71,12 @@ spec:
                               allowed between pods. Accepted values are default, always,
                               never.
                             type: string
+                          skipUpgrade:
+                            default: false
+                            description: SkipUpgrade indicicates that Cilium maintenance
+                              should be skipped during upgrades. This can be used
+                              when operators wish to self manage the Cilium installation.
+                            type: boolean
                         type: object
                       kindnetd:
                         type: object
