change signaling method for FCL curated packages support
Previously, the creation a of package bundle controller was executed via a
helm chart release. Now that helm chart will create a package instead. The end
result being the same, that the packages controller will notice the newly
created resource and do what it needs to support curated packages on the new
workload cluster.

One additional value is passed to the helm invocation to help the packages
controller take the appropriate actions.

--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -6030,7 +6030,7 @@ rules:
 - apiGroups:
   - packages.eks.amazonaws.com
   resources:
-  - packagebundlecontrollers
+  - packages
   verbs:
   - create
   - delete
