--- a/config/manifest/eksa-components.yaml
+++ b/config/manifest/eksa-components.yaml
@@ -5052,6 +5052,61 @@ spec:
                 items:
                   type: string
                 type: array
+              hostOSConfiguration:
+                description: HostOSConfiguration provides OS specific configurations
+                  for the machine
+                properties:
+                  bottlerocketConfiguration:
+                    description: BottlerocketConfiguration defines the Bottlerocket
+                      configuration on the host OS. These settings only take effect
+                      when the `osFamily` is bottlerocket.
+                    properties:
+                      kernel:
+                        description: Kernel defines the kernel settings for bottlerocket.
+                        properties:
+                          sysctlSettings:
+                            additionalProperties:
+                              type: string
+                            description: SysctlSettings defines the kernel sysctl
+                              settings to set for bottlerocket nodes.
+                            type: object
+                        type: object
+                      kubernetes:
+                        description: Kubernetes defines the Kubernetes settings on
+                          the host OS.
+                        properties:
+                          allowedUnsafeSysctls:
+                            description: AllowedUnsafeSysctls defines the list of
+                              unsafe sysctls that can be set on a node.
+                            items:
+                              type: string
+                            type: array
+                          clusterDNSIPs:
+                            description: ClusterDNSIPs defines IP addresses of the
+                              DNS servers.
+                            items:
+                              type: string
+                            type: array
+                          maxPods:
+                            description: MaxPods defines the maximum number of pods
+                              that can run on a node.
+                            type: integer
+                        type: object
+                    type: object
+                  ntpConfiguration:
+                    description: NTPConfiguration defines the NTP configuration on
+                      the host OS.
+                    properties:
+                      servers:
+                        description: Servers defines a list of NTP servers to be configured
+                          on the host OS.
+                        items:
+                          type: string
+                        type: array
+                    required:
+                    - servers
+                    type: object
+                type: object
               instanceType:
                 description: InstanceType is the type of instance to create.
                 type: string
@@ -5300,6 +5355,16 @@ spec:
                       configuration on the host OS. These settings only take effect
                       when the `osFamily` is bottlerocket.
                     properties:
+                      kernel:
+                        description: Kernel defines the kernel settings for bottlerocket.
+                        properties:
+                          sysctlSettings:
+                            additionalProperties:
+                              type: string
+                            description: SysctlSettings defines the kernel sysctl
+                              settings to set for bottlerocket nodes.
+                            type: object
+                        type: object
                       kubernetes:
                         description: Kubernetes defines the Kubernetes settings on
                           the host OS.
@@ -5666,6 +5731,16 @@ spec:
                       configuration on the host OS. These settings only take effect
                       when the `osFamily` is bottlerocket.
                     properties:
+                      kernel:
+                        description: Kernel defines the kernel settings for bottlerocket.
+                        properties:
+                          sysctlSettings:
+                            additionalProperties:
+                              type: string
+                            description: SysctlSettings defines the kernel sysctl
+                              settings to set for bottlerocket nodes.
+                            type: object
+                        type: object
                       kubernetes:
                         description: Kubernetes defines the Kubernetes settings on
                           the host OS.
