--- a/pkg/providers/vsphere/testdata/expected_results_bottlerocket_boot_settings_config_cp.yaml
+++ b/pkg/providers/vsphere/testdata/expected_results_bottlerocket_boot_settings_config_cp.yaml
@@ -479,14 +479,14 @@ spec:
       boot:
         bootKernelParameters:
           setting1:
-          - foo
-          - bar
+          - "foo"
+          - "bar"
           setting2:
-          - abc
+          - "abc"
       kernel:
         sysctlSettings:
-          setting1: foo
-          setting2: bar
+          setting1: "foo"
+          setting2: "bar"
     cipherSuites: TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
     users:
       - name: ec2-user
