--- a/test/e2e/SKIPPED_TESTS.yaml
+++ b/test/e2e/SKIPPED_TESTS.yaml
@@ -22,11 +22,11 @@ skipped_tests:
 - TestSnowKubernetes126UbuntuRemoveWorkerNodeGroups
 - TestSnowKubernetes126OIDC
 - TestSnowKubernetes126UbuntuProxyConfig
-- TestSnowKubernetes122SimpleFlow
-- TestSnowKubernetes123SimpleFlow
-- TestSnowKubernetes124SimpleFlow
-- TestSnowKubernetes125SimpleFlow
-- TestSnowKubernetes126SimpleFlow
+# - TestSnowKubernetes122SimpleFlow
+# - TestSnowKubernetes123SimpleFlow
+# - TestSnowKubernetes124SimpleFlow
+# - TestSnowKubernetes125SimpleFlow
+# - TestSnowKubernetes126SimpleFlow
 - TestSnowKubernetes122UbuntuTo123Upgrade
 - TestSnowKubernetes123UbuntuTo124Upgrade
 - TestSnowKubernetes124UbuntuTo125Upgrade
