Add Proxy support for Nutanix
Propagate Proxy config for Nutanix templates.

--- a/pkg/providers/nutanix/config/cp-template.yaml
+++ b/pkg/providers/nutanix/config/cp-template.yaml
@@ -165,6 +165,15 @@ spec:
       owner: root:root
       path: "/etc/containerd/certs.d/{{ .mirrorBase }}/ca.crt"
 {{- end }}
+{{- if .proxyConfig }}
+    - content: |
+        [Service]
+        Environment="HTTP_PROXY={{.httpProxy}}"
+        Environment="HTTPS_PROXY={{.httpsProxy}}"
+        Environment="NO_PROXY={{ stringsJoin .noProxy "," }}"
+      owner: root:root
+      path: /etc/systemd/system/containerd.service.d/http-proxy.conf
+{{- end }}
 {{- if .registryMirrorMap }}
     - content: |
         [plugins."io.containerd.grpc.v1.cri".registry.mirrors]
@@ -276,8 +285,10 @@ spec:
         sshAuthorizedKeys:
           - "{{.controlPlaneSshAuthorizedKey}}"
     preKubeadmCommands:
-{{- if and .registryMirrorMap }}
+{{- if .registryMirrorMap }}
       - cat /etc/containerd/config_append.toml >> /etc/containerd/config.toml
+{{- end }}
+{{- if or .proxyConfig .registryMirrorMap }}
       - sudo systemctl daemon-reload
       - sudo systemctl restart containerd
 {{- end }}
