Update cluster-api to v1.4.2
This involved updating controller-runtime as well, which required
updating rufio and eks-a curated packages.

There were some breaking changes in curated packages, hence all those
updates.

--- a/pkg/providers/snow/testdata/expected_results_main_md_bottlerocket.yaml
+++ b/pkg/providers/snow/testdata/expected_results_main_md_bottlerocket.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: eksa-system
 spec:
   template:
+    metadata: {}
     spec:
       clusterConfiguration:
         apiServer: {}
