--- a/pkg/providers/snow/testdata/expected_results_main_md_ubuntu.yaml
+++ b/pkg/providers/snow/testdata/expected_results_main_md_ubuntu.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: eksa-system
 spec:
   template:
+    metadata: {}
     spec:
       clusterConfiguration:
         apiServer: {}
