Reduce controller's log verbosity
Defaulting to v=4 was printing a lot of client-go and controller-runtime
"debug" logs that added a lot of noise but no value.

Now it defaults to 0 and for tilt we bump it to 2, which adds a little
more information from controller-runtime, specially during startup, but
still avoids unnecessary noise.

--- a/config/tilt/kustomization.yaml
+++ b/config/tilt/kustomization.yaml
@@ -12,6 +12,9 @@ patches:
     - op: add
       path: /spec/template/spec/containers/0/args/-
       value: --logging-format=text
+    - op: add
+      path: /spec/template/spec/containers/0/args/-
+      value: --v=2
   target:
     kind: Deployment
     name: eksa-controller-manager
