--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -37,6 +37,19 @@ spec:
         securityContext:
           allowPrivilegeEscalation: false
           runAsNonRoot: true
+        env:
+        - name: POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
+        - name: POD_UID
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.uid
       terminationGracePeriodSeconds: 10
       tolerations:
         - effect: NoSchedule
