--- a/test/e2e/SKIPPED_TESTS.yaml
+++ b/test/e2e/SKIPPED_TESTS.yaml
@@ -1,8 +1,12 @@
 skipped_tests:
 # CloudStack
 - TestCloudStackKubernetes123RedhatProxyConfig
+- TestCloudStackKubernetes124RedhatProxyConfig
 - TestCloudStackKubernetes123AddRemoveAz
+- TestCloudStackKubernetes124AddRemoveAz
 - TestCloudStackKubernetes123MultiEndpointSimpleFlow
+- TestCloudStackKubernetes124MultiEndpointSimpleFlow
+
 # CloudStack Registry Mirror endpoint was not set up
 - TestCloudStackKubernetes123UbuntuAirgappedRegistryMirror
 # Nutanix
